# rtmpose3d

./: .gitignore  Dockerfile  README.md  __init__.py  huggingface_README.md  inference.py  main.py  pyproject.toml  requirements.txt  rtmpose3d_inference.py  setup.py
.devcontainer/: devcontainer.json
configs/: __init__.py
examples/: basic_usage.py
rtmpose3d/: __init__.py  configuration.py  inference.py  modeling.py
rtmpose3d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rtmpose3d/checkpoints/: README.md
rtmpose3d/configs/: __init__.py
rtmpose3d/weights/: __init__.py  downloader.py
tests/: test_inference.py  test_single_person.py  test_visualize.py
weights/: downloader.py
